# copier-template

./: .copier-answers.yml  .gitignore  .htmlvalidate.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  copier.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  template_files
.ast_grep/rules/: no-raise-notimplementederror-in-special-method.yml
.ast_grep/tests/: no-raise-notimplementederror-in-special-method-test.yml
.github/workflows/: ci.yml
.template_files/: npm_update_node  uv_update_deps
extensions/: extensions.py
template/: .editorconfig.jinja  .gitignore.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  {% if uses_copier %}{{_copier_conf.answers_file}}{% endif %}.jinja  {% if uses_npm %}.nvmrc{% endif %}.jinja  {% if uses_npm %}package.json{% endif %}.jinja  {% if uses_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja  {% if uses_prettier %}.prettierignore{% endif %}.jinja  {% if uses_uv %}.python-version{% endif %}.jinja  {% if uses_uv %}pyproject.toml{% endif %}.jinja  {% if uses_yamllint %}.yamllint.yml{% endif %}.jinja
template/.template_files/: {% if uses_npm %}npm_update_deps{% endif %}.jinja  {% if uses_uv %}uv_install_deps{% endif %}.jinja  {% if uses_uv %}uv_post_install{% endif %}.jinja  {% if uses_uv %}uv_update_deps{% endif %}.jinja  {% if uses_uv %}uv_update_python{% endif %}.jinja
template/.template_scripts/: {% if uses_uv %}uv_outdated_deps.py{% endif %}.jinja  {% if uses_uv %}uv_update_deps.sh{% endif %}.jinja
template/{% if is_python_package %}src{% endif %}/{{ project_name_slug }}/: __init__.py.jinja
template/{% if uses_ast_grep %}.ast_grep{% endif %}/tests/__snapshots__/: {% if has_python %}no-raise-notimplementederror-in-special-method-snapshot.yml{% endif %}.jinja
template/{% if uses_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja
testdata/: test.html  test.sh
tests/: dummy_test.bats  dummy_test.py  example_test.bats  example_test.py  extensions_test.py  install_test.bats  uv_latest_python_test.py  uv_update_deps_internal_test.py
