[project]
name = "copier-template"
version = "0.1.4"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[dependency-groups]
dev = [
  "ast-grep-cli==0.39.6",
  "bump-my-version==1.2.4",
  "cookiecutter==2.6.0",
  "copier==9.10.2",
  "copier-template-extensions==0.3.3",
  "frozendict==2.4.6",
  "gha-update==0.2.0",
  "gitlint==0.19.1",
  "identify==2.6.15",
  "licensecheck==2025.1.0",
  "mypy==1.18.2",
  "packaging==25.0",
  "pre-commit==4.3.0",
  "pyfakefs==5.9.3",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "pytest-custom_exit_code==0.3.0",
  "pytest-mock==3.15.1",
  "pytest-subprocess==1.5.3",
  "ruff==0.14.0",
  "shellcheck-py==0.11.0.1",
  "tombi==0.6.25",
  "typos==1.38.1",
  "yamllint==1.37.1",
  "zizmor==1.14.2",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.bumpversion]
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "stubs"
namespace_packages = true
pretty = true
python_version = "3.14"
scripts_are_modules = true
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --suppress-no-test-exit-code --cov --cov-report=term-missing"
markers = ["slow"]
pythonpath = ["."]

[tool.ruff]
namespace-packages = [
  ".template_files",
]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",
  "D1",
  "E741",
  "EM",
  "FIX",
  "INP001",
  "PLR09",
  "PT011",
  "PTH",
  "PYI025",
  "S603",
  "S607",
  "T20",
  "TD",
  "TRY003",
  "TRY301",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["frozendict.frozendict"]

[tool.tombi]

[tool.typos]
files.extend-exclude = [
  "/.copier-answers.yml",
]
default.extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker: *disable-line$",
  "(?s)(#|//)\\s*spellchecker:* off.*?\\n\\s*(#|//)\\s*spellchecker:* on",
  "(#|//)\\s*spellchecker:* disable-next-line\\n.*",
]

[tool.uv]
package = false
