[project]
name = "copier-template"
version = "0.1.8"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[dependency-groups]
dev = [
  "ast-grep-cli==0.40.3",
  "bump-my-version==1.2.5",
  "cookiecutter==2.6.0",
  "copier==9.11.0",
  "copier-template-extensions==0.3.3",
  "frozendict==2.4.7",
  "gha-update==0.2.0",
  "gitlint==0.19.1",
  "identify==2.6.15",
  "licensecheck==2025.1.0",
  "mypy==1.19.1",
  "packaging==25.0",
  "pre-commit==4.5.1",
  "pyfakefs==5.10.2",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-custom_exit_code==0.3.0",
  "pytest-mock==3.15.1",
  "pytest-subprocess==1.5.3",
  "ruff==0.14.9",
  "shellcheck-py==0.11.0.1",
  "tombi==0.7.7",
  "typos==1.40.0",
  "yamllint==1.37.1",
  "zizmor==1.18.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.bumpversion]
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "stubs"
namespace_packages = true
pretty = true
python_version = "3.14"
scripts_are_modules = true
strict = true

[tool.pytest]
addopts = [
  "--cov",
  "--cov-report=term-missing",
  "--strict-markers",
  "--suppress-no-test-exit-code",
]
markers = ["slow"]
pythonpath = ["."]

[tool.ruff]
namespace-packages = [
  ".template_files",
]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",  # mccabe:*
  "D1",  # pydocstyle:undocumented-*
  "E741",  # pycodestyle:ambiguous-variable-name
  "EM",  # flake8-errmsg:*
  "FIX",  # flake8-fixme:*
  "INP001",  # flake8-no-pep420:implicit-namespace-package
  "PLR09",  # refactor:too-many-*
  "PT011",  # flake8-pytest-style:pytest-raises-too-broad
  "PTH",  # flake8-use-pathlib:*
  "PYI025",  # flake8-pyi:unaliased-collections-abc-set-import
  "S603",  # flake8-bandit:subprocess-without-shell-equals-true
  "S607",  # flake8-bandit:start-process-with-partial-path
  "T20",  # flake8-print:*
  "TD",  # flake8-todos:*
  "TRY003",  # tryceratops:raise-vanilla-args
  "TRY301",  # tryceratops:raise-within-try
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["frozendict.frozendict"]

[tool.tombi]

[tool.typos]
files.extend-exclude = [
  "/.copier-answers.yml",
]
default.extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker: *disable-line$",
  "(?s)(#|//)\\s*spellchecker:* off.*?\\n\\s*(#|//)\\s*spellchecker:* on",
  "(#|//)\\s*spellchecker:* disable-next-line\\n.*",
]

[tool.uv]
package = false
